--- a/packages/test-app/app/templates/components/login-form.hbs
+++ b/packages/test-app/app/templates/components/login-form.hbs
@@ -7,11 +7,11 @@
 <form {{action 'authenticateWithOAuth2' on='submit'}}>
   <div class="form-group">
     <label for="identification">Login</label>
-    <input type="text" placeholder="Enter Login" class="form-control" onchange={{action 'updateIdentification'}} value={{this.identification}} data-test-identification />
+    <input id="login-input" type="text" placeholder="Enter Login" class="form-control" onchange={{action 'updateIdentification'}} value={{this.identification}} data-test-identification />
   </div>
   <div class="form-group">
     <label for="password">Password</label>
-    <input type="password" placeholder="Enter Password" class="form-control" onchange={{action 'updatePassword'}} value={{this.password}} data-test-password />
+    <input id="password-input" type="password" placeholder="Enter Password" class="form-control" onchange={{action 'updatePassword'}} value={{this.password}} data-test-password />
   </div>
   <div class="form-group form-check">
     <input type="checkbox" class="form-check-input" id="rememberMe" onchange={{action 'updateRememberMe'}} checked={{this.rememberMe}} />
@@ -19,7 +19,7 @@
       Remember me
     </label>
   </div>
-  <button type="submit" class="btn btn-primary">Login</button>
+  <button id="validate-button" type="submit" class="btn btn-primary">Login</button>
 </form>
 {{#if errorMessage}}
   <div class="alert alert-danger" data-test-error-message>
