--- a/packages/test-app/app/templates/components/main-navigation.hbs
+++ b/packages/test-app/app/templates/components/main-navigation.hbs
@@ -1,30 +1,24 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-  {{#link-to 'index' classNames='navbar-brand'}}
+  <LinkTo @route="protected" class="navbar-brand">
     Home
-  {{/link-to}}
+  </LinkTo>
   <ul class="navbar-nav mr-auto">
-    {{#link-to 'protected' tagName='li' class='nav-item'}}
-      <a class="nav-link" href="#">Protected Page</a>
-    {{/link-to}}
-    {{#link-to 'engine.protected' tagName='li'}}
-      <a class="nav-link" href="#">Protected Engine Page</a>
-    {{/link-to}}
-    {{#link-to 'engine.open-only' tagName='li'}}
-      <a class="nav-link" href="#">Open-only Engine Page</a>
-    {{/link-to}}
-    {{#link-to 'auth-error' tagName='li' class='nav-item'}}
-      <a class="nav-link" href="#">Auth Error Page</a>
-    {{/link-to}}
+    <LinkTo @route="protected.one" class="nav-item" @tagName="li" data-test-button"one">
+      <a class="nav-link" href="#">
+        Protected one
+      </a>
+    </LinkTo>
+    <LinkTo @route="protected.two" class="nav-item" @tagName="li">
+      <a class="nav-link" href="#">
+        Protected two
+      </a>
+    </LinkTo>
   </ul>
   <form class="form-inline">
-    {{! display logout button when the session is authenticated, login button otherwise }}
     {{#if session.isAuthenticated}}
-      {{#if sessionAccount.account}}
-        <span class="navbar-text mr-3">Signed in as {{sessionAccount.account.name}}</span>
-      {{/if}}
-      <a {{action 'logout'}} class="btn btn-danger" href="#" role="button">Logout</a>
+      <a id="logout-button" {{on "click" this.logout}} class="btn btn-danger" href="#" role="button">Logout</a>
     {{else}}
-      <a {{action onLogin}} class="btn btn-success" href="#" role="button">Login</a>
+      {{!-- <a {{action onLogin}} class="btn btn-success" href="#" role="button">Login</a> --}}
     {{/if}}
   </form>
 </nav>
